--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
-<!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title>Walter Valdez - A Basic Web Page</title>
-	</head>
-	<body>
-		<h1>Walter Valdez</h1>
-		<h2>My Location: Buenos Aires, Argentina</h2>
-		<p>My system RAM: 8 GB</p>
-		<p><img src="images/yo.png" width="270" height="273" alt="Profile Pciture"></p>
-		<p>&star; <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a> &star;</p>
-	</body>
+<!DOCTYPE html>
+<html lang="en-US">
+
+    <head>
+        <meta charset="utf-8">
+        <title>Walter Valdez - Assignment Portal</title>
+        <meta name="Basic Website Assignment" content="Assignment portal page for CIT 230 class - Web Frontend Development at Brigham Young University - Idaho.">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles/main.css">
+    </head>
+    <body>
+        <header>
+            <img src="http://i.imgur.com/Sju9eyM.png" width="270" height="273" alt="My Profile Picture">
+
+            <h1>Walter Valdez</h1>
+        </header>
+        <nav>
+            <!-- Future main menu coming soon. -->
+        </nav>
+        <main>
+            <h2>CIT 230 - Assignment Portal</h2>
+            <ul>
+                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+            </ul>
+
+        </main>
+        <footer>
+             <p>&copy; 2017 - Walter Valdez - Argentina - <a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a></p>
+        </footer>
+    </body>
 </html>
