--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <!-- Future main menu coming soon. -->
         </nav>
         <main>
-            <h2>CIT 230 - Assignment Portal</h2>
+            <h2>CIT 230 - Assignment Portal</h2>assignments/lesson-3/fixedhtml.html>Franklin
             <ul>
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed HTML</a></li>
-                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+                <li>Lesson 4: <a href="assignments/lesson-3/fixedhtml.html">Franklin City HTML Page</a></li>
                 <li>Lesson ##: <a href="#">Assignment Label</a></li>
             </ul>
 
