--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed HTML</a></li>
                 <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin City HTML Page</a></li>
-                <li>Lesson ##: <a href="#">Assignment Label</a></li>
+                <li>Lesson 4: <a href="assignments/lesson-4/Website%20Planning%20Document%20Walter%20Valdez%20CIT230.pdf">Website Planning Document</a></li>
             </ul>
 
         </main>
