--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed HTML</a></li>
                 <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin City HTML Page</a></li>
                 <li>Lesson 4: <a href="assignments/lesson-4/Website%20Planning%20Document%20Walter%20Valdez%20CIT230.pdf">Website Planning Document</a></li>
+                <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Fixed HTML</a></li>
             </ul>
+            
 
         </main>
         <footer>
