arregle un error

--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
             <!-- Future main menu coming soon. -->
         </nav>
         <main>
-            <h2>CIT 230 - Assignment Portal</h2>assignments/lesson-3/fixedhtml.html>Franklin
+            <h2>CIT 230 - Assignment Portal</h2>
             <ul>
                 <li>Lesson 3: <a href="assignments/lesson-3/fixedhtml.html">Fixed HTML</a></li>
                 <li>Lesson 4: <a href="assignments/lesson-4/franklin-4.html">Franklin City HTML Page</a></li>
                 <li>Lesson 4: <a href="assignments/lesson-4/Website%20Planning%20Document%20Walter%20Valdez%20CIT230.pdf">Website Planning Document</a></li>
                 <li>Lesson 5: <a href="assignments/lesson-5/franklin-5.html">Fixed HTML</a></li>
             </ul>
-            
 
         </main>
         <footer>
