--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <li>Lesson 6: <a href="assignments/lesson-6/franklin-6.html">Franklin-6</a></li>
             <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin-7</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/tablebuild.html">Build a Data Table</a></li>
+            <li>Lesson 8: <a href="assignments/lesson-8/stormcenter.html">Storm Center</a></li>
+
         </ul>
 
     </main>
