--- a/assignments/lesson-7/franklin-7.html
+++ b/assignments/lesson-7/franklin-7.html
@@ -46,12 +46,12 @@
 		<!-- Links  -->
 		<nav>
 			<ul class="navigation">
-				<li><a href="#">Home</a></li>
+				<li><a href="file:///C:/Users/Walter/Documents/GitHub/anacostia.github.io/assignments/lesson-8/franklin-7.html">Home</a></li>
 				<li class="active"><a href="#">Franklin</a></li>
 				<li><a href="#">Greenville</a></li>
 				<li><a href="#">Springfield</a></li>
-				<li><a href="#">Storm center</a></li>
-				<li><a href="gallery-7.html">Gallery</a></li>
+				<li><a href="https://anacostia.github.io/assignments/lesson-8/stormcenter.html">Storm center</a></li>
+				<li><a href="https://anacostia.github.io/assignments/lesson-7/gallery-7.html">Gallery</a></li>
 			</ul>
 
 		</nav>
