--- a/assignments/lesson-7/gallery-7.html
+++ b/assignments/lesson-7/gallery-7.html
@@ -48,8 +48,8 @@
             <li class="active"><a href="#">Franklin</a></li>
             <li><a href="#">Greenville</a></li>
             <li><a href="#">Springfield</a></li>
-            <li><a href="#">Storm center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="https://anacostia.github.io/assignments/lesson-8/stormcenter.html">Storm center</a></li>
+            <li><a href="https://anacostia.github.io/assignments/lesson-7/gallery-7.html">Gallery</a></li>
         </ul>
 
     </nav>
