--- a/assignments/lesson-7/franklin-7.html
+++ b/assignments/lesson-7/franklin-7.html
@@ -46,7 +46,7 @@
 		<!-- Links  -->
 		<nav>
 			<ul class="navigation">
-				<li><a href="file:///C:/Users/Walter/Documents/GitHub/anacostia.github.io/assignments/lesson-8/franklin-7.html">Home</a></li>
+				<li><a href="https://anacostia.github.io/assignments/lesson-7/franklin-7.html">Home</a></li>
 				<li class="active"><a href="#">Franklin</a></li>
 				<li><a href="#">Greenville</a></li>
 				<li><a href="#">Springfield</a></li>
