--- a/assignments/lesson-9/airplanes.html
+++ b/assignments/lesson-9/airplanes.html
@@ -23,7 +23,7 @@
     <script>
         var header = document.querySelector('header');
         var section = document.querySelector('section');
-        var requestURL = 'scripts/airplanesinfo.json';
+        var requestURL = 'https://anacostia.github.io/assignments/lesson-9/scripts/airplanesinfo.json';
         var request = new XMLHttpRequest();
         request.open('GET', requestURL);
         request.responseType = 'json';
