--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>Lesson 7: <a href="assignments/lesson-7/franklin-7.html">Franklin-7</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/tablebuild.html">Build a Data Table</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/stormcenter.html">Storm Center</a></li>
-
+            <li>Lesson 9: <a href="https://anacostia.github.io/assignments/lesson-9/heroes-finished.html">Using JSON Data</a></li>
         </ul>
 
     </main>
