--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <li>Lesson 8: <a href="assignments/lesson-8/tablebuild.html">Build a Data Table</a></li>
             <li>Lesson 8: <a href="assignments/lesson-8/stormcenter.html">Storm Center</a></li>
             <li>Lesson 9: <a href="https://anacostia.github.io/assignments/lesson-9/heroes-finished.html">Using JSON Data</a></li>
+            <li>Lesson 9: <a href=
+            "assignments/lesson-9/index.html">Weather and Town JSON Data</a></li>
         </ul>
 
     </main>
