--- a/assignments/lesson-9/franklin-7.html
+++ b/assignments/lesson-9/franklin-7.html
@@ -60,7 +60,7 @@
 			
         <h1>Weather Conditions for <span id="place"> City, State </span></h1>   
             
-                    <h1>Condition: <span id="icon"> i </span></h1>   
+                    <h1>Condition: <span id="icon"> Cloudy</span></h1>   
 
             <h1><img id="w_icon" src="" alt"current weather"><h1>
 
