--- a/assignments/weathersite/index.html
+++ b/assignments/weathersite/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8">
 
-    <title>📡Radar Weather Page - Forecast for Franklin | Radar</title>
+    <title>📡Radar Weather Page - Index Page | Radar</title>
     <meta name="author" content="Walter Valdez">
-    <meta name="description" content="Franklin Weather Page for CIT 230 class - Web Frontend Development at Brigham Young University - Idaho.">
+    <meta name="description" content="Index Weather Page for CIT 230 class - Web Frontend Development at Brigham Young University - Idaho.">
 
 
 
@@ -33,7 +33,7 @@
 
 <body>
 
-       <header class="site-header">
+    <header class="site-header">
         <h1>📡Radar</h1>
         <h2>Forecast for the Franklin, Greenville and Springfield area.</h2 <div class="hamburger" onclick="toggleHam()"></div>
 
@@ -44,7 +44,7 @@
 
     <!-- Links  -->
     <nav>
-        <ul class="navigation">
+        <ul id="mainmenu" class="navigation">
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="franklin.html">Franklin</a></li>
             <li><a href="#">Greenville</a></li>
@@ -56,9 +56,9 @@
     </nav>
 
     <main id="index">
-        
 
-        
+
+
         <section class="jsondata">
         </section>
 
@@ -75,9 +75,28 @@
 
     </footer>
 
-<script src="scripts/hamburger.js"></script>
-<script src="scripts/activemenu.js"></script>
+    <script src="scripts/hamburger.js"></script>
+    <script src="scripts/activemenu.js"></script>
     <script src="scripts/towndata.js"></script>
+
+
+    <script>
+    var urlString, urlArray, pageHREF, menu, i, currentURL;
+    urlString = document.location.href;
+    urlArray = urlString.split('/');
+    pageHREF = urlArray[urlArray.length - 1];
+
+    if (pageHREF !== "") {
+        menu = document.querySelectorAll('ul#mainmenu li a');
+        for (i = 0; i < menu.length; i++) {
+            currentURL = (menu[i].getAttribute('href'));
+            menu[i].parentNode.className = '';
+            if (currentURL === pageHREF) {
+                menu[i].parentNode.className = 'active';
+            }
+        }
+    }
+</script>
 </body>
 
 </html>
