--- a/assignments/weathersite/stormcenter.html
+++ b/assignments/weathersite/stormcenter.html
@@ -5,9 +5,9 @@
 
     <meta charset="utf-8">
 
-    <title>📡Radar Weather Page - Thank you page | Radar web page</title>
+    <title>📡Radar Weather Page - Storm Center | Radar web page</title>
     <meta name="author" content="Walter Valdez">
-    <meta name="description" content="thank you web page for the Franklin Weather Page - CIT 230 class - Web Frontend Development at Brigham Young University - Idaho.">
+    <meta name="description" content="Storm Center web page for the Franklin Weather Page - CIT 230 class - Web Frontend Development at Brigham Young University - Idaho.">
 
 
 
@@ -43,11 +43,11 @@
 
     <!-- Links  -->
     <nav>
-        <ul class="navigation">
+        <ul id="mainmenu" class="navigation">
             <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="#">Franklin</a></li>
-            <li><a href="#">Greenville</a></li>
-            <li><a href="#">Springfield</a></li>
+            <li class="active"><a href="franklin.html">Franklin</a></li>
+            <li><a href="greenville.html">Greenville</a></li>
+            <li><a href="springfield.html">Springfield</a></li>
             <li><a href="stormcenter.html">Storm center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -150,6 +150,25 @@ When you can do safely, please send us a report when you observe unusual weather
         </script>
     </footer>
 
+    <script>
+    var urlString, urlArray, pageHREF, menu, i, currentURL;
+    urlString = document.location.href;
+    urlArray = urlString.split('/');
+    pageHREF = urlArray[urlArray.length - 1];
+
+    if (pageHREF !== "") {
+        menu = document.querySelectorAll('ul#mainmenu li a');
+        for (i = 0; i < menu.length; i++) {
+            currentURL = (menu[i].getAttribute('href'));
+            menu[i].parentNode.className = '';
+            if (currentURL === pageHREF) {
+                menu[i].parentNode.className = 'active';
+            }
+        }
+    }
+</script>
+    
+    
 </body>
 
 </html>
