--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <li>Lesson 9: <a href="https://anacostia.github.io/assignments/lesson-9/heroes-finished.html">Using JSON Data</a></li>
             <li>Lesson 9: <a href=
             "assignments/lesson-9/index.html">Weather and Town JSON Data</a></li>
+            <li>Lesson 10: <a href=
+            "assignments/weathersite/index.html">Weather Site</a></li>
         </ul>
 
     </main>
