--- a/assignments/weathersite/springfield.html
+++ b/assignments/weathersite/springfield.html
@@ -49,7 +49,7 @@
 				<li class="active"><a href="franklin.html">Franklin</a></li>
 				<li><a href="greenville.html">Greenville</a></li>
 				<li><a href="springfield.html">Springfield</a></li>
-				<li><a href="stormcenter.html">Storm center</a></li>
+				<li><a href="stormcenter.html">Storm Center</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
 			</ul>
 
