--- a/assignments/weathersite/stormcenter.html
+++ b/assignments/weathersite/stormcenter.html
@@ -48,7 +48,7 @@
             <li class="active"><a href="franklin.html">Franklin</a></li>
             <li><a href="greenville.html">Greenville</a></li>
             <li><a href="springfield.html">Springfield</a></li>
-            <li><a href="stormcenter.html">Storm center</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
 
@@ -57,7 +57,7 @@
     <!-- Content -->
 
     <article>
-        <h3>Storm, tornado, hail, hurricane or any othe unusual weather report</h3>
+        <h3>Storm, tornado, hail, hurricane or any other unusual weather report</h3>
         <p>When to send a storm report?
 
 When you can do safely, please send us a report when you observe unusual weather</p>
