--- a/assignments/weathersite/thankyou.html
+++ b/assignments/weathersite/thankyou.html
@@ -44,12 +44,12 @@
     <!-- Links  -->
     <nav>
         <ul class="navigation">
-            <li><a href="franklin-7.html">Home</a></li>
-            <li class="active"><a href="#">Franklin</a></li>
-            <li><a href="#">Greenville</a></li>
-            <li><a href="#">Springfield</a></li>
-            <li><a href="#">Storm center</a></li>
-            <li><a href="#">Gallery</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="franklin.html">Franklin</a></li>
+            <li><a href="greenville.html">Greenville</a></li>
+            <li><a href="springfield.html">Springfield</a></li>
+            <li><a href="stormcenter.html">Storm Center</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
         </ul>
 
     </nav>
