--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             "assignments/lesson-9/index.html">Weather and Town JSON Data</a></li>
             <li>Lesson 10: <a href=
             "assignments/weathersite/index.html">Weather Site</a></li>
+            <li>Lesson 11: <a href=
+            "assignments/lesson-11/index.htm"> jQuery Applications</a></li>
         </ul>
 
     </main>
