Ahora si funciona sales

--- a/assignments/Term Website Project/index the mountain spoke.html
+++ b/assignments/Term Website Project/index the mountain spoke.html
@@ -100,31 +100,7 @@
             </p>
         </div>
 
-        <button class="accordion">Sales</button>
-        <div class="panel">
 
-            <div id="slideshow">
-                <div>
-                    <img src="images/sales/1.jpg">
-                </div>
-                <div>
-                    <img src="images/sales/2.jpg">
-                </div>
-                <div>
-                    Cannondale Habit 6 - 2018 $1999
-                        <br> With all-mountain capability and XC efficiency, Habit is the perfect “do-it-all, and do-it-well” MTB fun machine. This lightweight aluminum frame features an X-Fusion shock and 120mm of go-anywhere travel. A RockShox Judy Silver fork offers another 120mm, so you can tackle rocks and roots with ease. WTB wheels are paired with matching WTB tires to ensure nimble handling and confidence-inspiring grip. An efficient Shimano 10-speed drivetrain and powerful Tektro hydraulic disc brakes provide performance in tough conditions, while quality Cannondale cockpit components ensure proper position and comfort.
-                </div>
-            </div>
-            <script src='images/sales/3.jpg'></script>
-
-
-
-            <script src="scripts/index.js"></script>
-
-
-
-
-        </div>
 
         <button class="accordion">Service</button>
         <div class="panel">
@@ -270,6 +246,67 @@
             </div>
 
         </div>
+
+        <button class="accordion">Sales</button>
+        <div class="panel">
+
+            <div id="slideshow">
+                <div>
+                    <img src="images/sales/1.jpg">
+                    <p>Cannondale Habit 6 - 2018 $1999
+                        <br> With all-mountain capability and XC efficiency, Habit is the perfect “do-it-all, and do-it-well” MTB fun machine. This lightweight aluminum frame features an X-Fusion shock and 120mm of go-anywhere travel. A RockShox Judy Silver fork offers another 120mm, so you can tackle rocks and roots with ease. WTB wheels are paired with matching WTB tires to ensure nimble handling and confidence-inspiring grip. An efficient Shimano 10-speed drivetrain and powerful Tektro hydraulic disc brakes provide performance in tough conditions, while quality Cannondale cockpit components ensure proper position and comfort.</p>
+                </div>
+                <div>
+                    <img src="images/sales/2.jpg">
+                    <p>Cannondale Habit 2 $4500
+                        <br> Looking for a bit more? The SE spec amplifies the Habit's rowdy capabilities with more aggressive tires, wide rims and burly brakes. Get some. The lightweight carbon frame features an aluminum swingarm for extra durability, and 120mm of go-anywhere travel. A RockShox Pike RC fork offers another 130mm so you can tackle rocks and roots with ease. The Habit's WTB rims are laced to DT Swiss hubs and are wrapped in Maxxis tires to ensure nimble handling and confidence-inspiring grip. With the range of its SRAM GX Eagle drivetrain and powerful Guide R brakes right at your fingertips, you'll be faster both going up and coming back down. And, a Fox dropper post make sure you're in the best riding position no matter where you are on the trail.</p>
+
+
+                </div>
+                <div>
+                    <img src="images/sales/3.jpg">
+                    <p>Cannondale Scalpel-Si 5 - 2018 $2799
+                        <br> Kill on the ups and thrill on the downs with the world's best XC race machine. Welcome to XXC. Cannondale built their brand on aluminum frames and the Scalpel-Si showcases what they've learned along the way with low weight, out of the saddle stiffness, and snappy, responsive handling. 100mm of trail-smoothing travel is managed by a RockShox Monarch shock and Cannondale's Lefty 2.0 fork, a combo that chews up rocks and roots, transforming techy trail sections into a magic carpet ride. With Stan's NoTubes ZTR Crest rims and tubeless-ready Schwalbe tires, it doesn't matter if you're riding chunky gnar or buttery singletrack, they'll carve the turns and grip like nothing else. Cannondale Si cranks and a 2 x 11-speed SRAM/Shimano drivetrain offers a wide gear range, high-speed shifting, and rock-solid performance. Shimano Deore brakes are there when you need them, with power and modulation to spare. Cannondale components and a Prologo saddle round out the build and keep those contact points happy.
+                    </p>
+
+                </div>
+                <div>
+                    <img src="images/sales/4.png">
+                    <p>Cannondale Scalpel-Si Carbon 1 - 2018 $7499
+                        <br> Kill on the ups and thrill on the downs with the world's best XC race machine. Welcome to XXC. The Ballistec carbon frame and oversize bottom bracket on the Scalpel-Si come into their own when you need to step on the gas. Fly through rooty trail sections with 100mm of RockShox Monarch XX travel in the rear, while Cannondale's 100mm-travel Lefty 2.0 Carbon fork chews through chop to keep you on your line. With HollowGram 23 Superlight carbon wheels and tubeless-ready Schwalbe tires you'll rip descents and climb like a goat. To throw you up those hills, SRAM’s 12-speed XX1-X01 Eagle drivetrain flaunts a huge 10-50 cassette and precise shifting you expect from SRAM. SRAM’s Level TLM Ultimate brakes keep the party under control with power to spare and unbelievably dialed modulation. Cannondale’s own handlebar, stem, and carbon seatpost with a Fabric Scoop saddle ensure lightweight, comfortable contact points whether it’s an after-work ride or all day race.
+                    </p>
+
+
+                </div>
+                <div>
+                    <img src="images/sales/5.jpg">
+                    <p>Cannondale Fat CAAD 1 - 2018 $$3200
+                        <br> Looking for a fatbike without all the fat? Lightweight construction and nimble OutFront geometry make the FAT CAAD so agile and quick, you’ll want to ride it all year long. This monster truck brings it with a SmartFormed aluminum frame for a stiff, responsive ride that's also trim on weight, while Cannondale's Lefty Olaf fork brings 100mm of travel to the table. Tubeless-ready Sun Ringle rims roll with confidence-swelling strength, and Schwalbe tires conform to practically any terrain with flotation and traction. A Shimano XT/SLX drivetrain gives you an 11-speed setup that goes up as well as it goes down, and SRAM Guide brakes are just what you need to bring the action to a swift, modulated stop. Cannondale supplies their lightweight handlebars, stem, and a Fabric Scoop saddle so you can comfortably ride this smash-ready bike almost anywhere in any season.</p>
+
+
+                </div>
+                <div>
+                    <img src="images/sales/6.jpg">
+                    <p> Cannondale Fat CAAD 3 - 2017 $1599 If you're seeking a fat bike that feels a bit more "fit," Cannondale's Fat CAAD 3 is in perfect shape to help you have an awesome time. Cannondale’s System Integrated technology and aluminum wizardry makes FAT CAAD so agile and quick, you’ll want to ride it year-round. The Shimano Deore drivetrain shifts like a dream, and Tektro Novela mechanical disc brakes offer superb stopping power. Cannondale's high quality handlebar, stem, and seatpost are just what you need to dial your position in to the nearest millimeter, and a Cannondale Stage 2 saddle offers enough support for full days of riding.
+                    </p>
+
+
+                </div>
+
+
+
+                <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+
+                <script src="scripts/index.js"></script>
+
+
+
+
+            </div>
+
+
+
+
 
     </section>
 
