--- a/assignments/Term Website Project/index the mountain spoke.html
+++ b/assignments/Term Website Project/index the mountain spoke.html
@@ -113,6 +113,8 @@
 
 
             <p>
+                When: from 05/01/2018 until 05/30/2018
+                <br>
                 Who: Advanced!
                 <br> Where: USFS gravel roads, double track, possibly single track (ability depending)
                 <br> How Long: Give yourself the greater part of the day for this ride. Actual riding time is usually between 6-8 hours per day in a 4-week tour.
