video overview link added

--- a/assignments/Term Website Project/index the mountain spoke.html
+++ b/assignments/Term Website Project/index the mountain spoke.html
@@ -672,7 +672,7 @@
     <footer>
         <a href="https://www.facebook.com/Themountainspoke/"><img src="images/social/036-facebook.png" alt="Facebook link" style="float:left;width:30px;height:30px;"></a>
 
-        <p>&copy; 2018 The Mountain Spoke | 123 Main St. Bozeman, MO 59718 |(999)999-9999 | Contact: etc@etc.com - Created by Walter Valdez <span id="date"></span></p> <a href="resources.html">Resources</a>
+        <p>&copy; 2018 The Mountain Spoke | 123 Main St. Bozeman, MO 59718 |(999)999-9999 | Contact: etc@etc.com - Created by Walter Valdez <span id="date"></span></p> <a href="resources.html">Resources</a><a href="overview.html"> Video Overview</a>
 
         <script>
             = "text/javascript"
