--- a/assignments/Term Website Project/overview.html
+++ b/assignments/Term Website Project/overview.html
@@ -37,6 +37,12 @@
   <source src="video.mp4" type="video/mp4">
   Your browser does not support HTML5 video.
 </video>
+<br>   
+If the video uploaded doesn´t work correctly here is a plan B.
+<br>    
+<iframe src="https://player.vimeo.com/video/264670834" width="640" height="337" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<p><a href="https://vimeo.com/264670834">Overview video The Mountain Spoke</a> from <a href="https://vimeo.com/user5537750">Walter Valdez</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+    
 
 
 
